--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   
         <tbody id ="elements" class="elements">
             
-           
         </tbody>
         </table>
+        <input type="text" id="inputText" placeholder="Buscar..." onkeyup="getUser()" >
     </div>
 </body>
 
