Subindo projeto bugado

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             
         </tbody>
         </table>
-        <input type="text" id="inputText" placeholder="Buscar..." onkeyup="getUser()" >
+        <input type="text" id="inputText" placeholder="Buscar..."  >
     </div>
 </body>
 
